# roo-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/src/: main.cpp
roo-engine/: CMakeLists.txt
roo-engine/src/: engine.cpp  pch.hpp  roo.hpp
roo-engine/src/Core/: Application.cpp  Application.hpp  Core.cpp  Core.hpp  Declarations.hpp  EntryPoint.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Rectangle.cpp  Rectangle.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
roo-engine/src/Events/: ApplicationEvent.cpp  ApplicationEvent.hpp  Event.cpp  Event.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp
roo-engine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
roo-engine/src/Renderer/: BufferLayout.cpp  BufferLayout.hpp  Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
roo-engine/src/Utils/: Audio.cpp  Audio.hpp  Utils.cpp  Utils.hpp
scripts/: GenerateProjectFiles.bat
scripts/cmake/: utils.cmake
